--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
 </head>
 
 <body class="grey lighten-4">
-    <nav class="z-depth-0">
-        <div class="nav-wrapper container">
-            <a href="/">Rhyme Time</a>
+        <div class="container">
+            <h5>Rhyme Time</h5>
         </div>
-    </nav>
 
     <div class="row">
-        <form class="col s6 offset-s3">
+      <div class="col s6 offset-s5">
+        Rhymes With:
+        <div class="input-field inline">
+          <input type="text">
+        </div>
+      </div>
+
+        <form class="col s6 offset-s5">
           <div class="row">
-            <div class="input-field">
+            <div class="input-field col s3">
               <input type="text">
             </div>
           </div>
@@ -34,25 +39,43 @@
           </div>
 
           <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col s3">
               <input type="text">
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col s3">
               <input type="text">
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col s3">
               <input type="text">
             </div>
           </div>
 
         </form>
       </div>
+
+      <div class="row">
+        <div class="col s6 offset-s4">
+          <a class="waves-effect waves-teal btn-flat">Q</a>
+          <a class="waves-effect waves-teal btn-flat">W</a>
+          <a class="waves-effect waves-teal btn-flat">E</a>
+          <a class="waves-effect waves-teal btn-flat">R</a>
+          <a class="waves-effect waves-teal btn-flat">T</a>
+          <a class="waves-effect waves-teal btn-flat">Y</a>
+          <a class="waves-effect waves-teal btn-flat">U</a>
+          <a class="waves-effect waves-teal btn-flat">I</a>
+          <a class="waves-effect waves-teal btn-flat">O</a>
+          <a class="waves-effect waves-teal btn-flat">P</a>
+          </div>
+        </div>
+      </div>
+
+
 
 
 
